// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`base > common 2`] = `
"index.d.ts:
declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`base > common 3`] = `
"index.esm.d.ts:
declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`base > common 4`] = `
"index.esm.js:
function index(a, b) {
  return a + b;
}

export { index as default };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`base > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":[],"mappings":"AAAA,cAAA,CAAyB,GAAW,CAAW,EAAA;AAC7C,EAAA,OAAO,CAAI,GAAA,CAAA,CAAA;AACb;;;;"}"
`;

exports[`base > common 6`] = `
"index.esm.min.js:
function t(t,e){return t+e}export{t as default};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`base > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":["index","a","b"],"mappings":"AAAA,SAAAA,EAAyBC,EAAWC,GAClC,OAAOD,EAAIC,CACb"}"
`;

exports[`base > common 8`] = `
"index.iife.js:
var JiekTestFoo = (function (exports) {
  'use strict';

  function index(a, b) {
    return a + b;
  }

  exports.default = index;

  Object.defineProperty(exports, '__esModule', { value: true });

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`base > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":[],"mappings":";;;EAAA,cAAA,CAAyB,GAAW,CAAW,EAAA;EAC7C,EAAA,OAAO,CAAI,GAAA,CAAA,CAAA;EACb;;;;;;;;;;;;"}"
`;

exports[`base > common 10`] = `
"index.iife.min.js:
var JiekTestFoo=function(e){"use strict";return e.default=function(e,t){return e+t},Object.defineProperty(e,"__esModule",{value:!0}),e}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`base > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":["a","b"],"mappings":"0DAAA,SAAyBA,EAAWC,GAClC,OAAOD,EAAIC,CACb"}"
`;

exports[`base > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.JiekTestFoo = {}));
})(this, (function (exports) { 'use strict';

  function index(a, b) {
    return a + b;
  }

  exports.default = index;

  Object.defineProperty(exports, '__esModule', { value: true });

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`base > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":[],"mappings":";;;;;;EAAA,cAAA,CAAyB,GAAW,CAAW,EAAA;EAC7C,EAAA,OAAO,CAAI,GAAA,CAAA,CAAA;EACb;;;;;;;;;;"}"
`;

exports[`base > common 14`] = `
"index.umd.min.js:
!function(e,t){"object"==typeof exports&&"undefined"!=typeof module?t(exports):"function"==typeof define&&define.amd?define(["exports"],t):t((e="undefined"!=typeof globalThis?globalThis:e||self).JiekTestFoo={})}(this,(function(e){"use strict";e.default=function(e,t){return e+t},Object.defineProperty(e,"__esModule",{value:!0})}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`base > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export default function (a: number, b: string) {\\n  return a + b\\n}\\n"],"names":["a","b"],"mappings":"6PAAA,SAAyBA,EAAWC,GAClC,OAAOD,EAAIC,CACb"}"
`;

exports[`single package and multiple entries > common 1`] = `
[
  "a.d.ts",
  "a.esm.d.ts",
  "a.esm.js",
  "a.esm.js.map",
  "a.esm.min.js",
  "a.esm.min.js.map",
  "a.iife.js",
  "a.iife.js.map",
  "a.iife.min.js",
  "a.iife.min.js.map",
  "a.umd.js",
  "a.umd.js.map",
  "a.umd.min.js",
  "a.umd.min.js.map",
  "b.d.ts",
  "b.esm.d.ts",
  "b.esm.js",
  "b.esm.js.map",
  "b.esm.min.js",
  "b.esm.min.js.map",
  "b.iife.js",
  "b.iife.js.map",
  "b.iife.min.js",
  "b.iife.min.js.map",
  "b.umd.js",
  "b.umd.js.map",
  "b.umd.min.js",
  "b.umd.min.js.map",
  "bar.d.ts",
  "bar.esm.d.ts",
  "bar.esm.js",
  "bar.esm.js.map",
  "bar.esm.min.js",
  "bar.esm.min.js.map",
  "bar.iife.js",
  "bar.iife.js.map",
  "bar.iife.min.js",
  "bar.iife.min.js.map",
  "bar.umd.js",
  "bar.umd.js.map",
  "bar.umd.min.js",
  "bar.umd.min.js.map",
  "c.d.ts",
  "c.esm.d.ts",
  "c.esm.js",
  "c.esm.js.map",
  "c.esm.min.js",
  "c.esm.min.js.map",
  "c.iife.js",
  "c.iife.js.map",
  "c.iife.min.js",
  "c.iife.min.js.map",
  "c.umd.js",
  "c.umd.js.map",
  "c.umd.min.js",
  "c.umd.min.js.map",
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`single package and multiple entries > common 2`] = `
"a.d.ts:
declare const a = "a";

export { a };
"
`;

exports[`single package and multiple entries > common 3`] = `
"a.esm.d.ts:
declare const a = "a";

export { a };
"
`;

exports[`single package and multiple entries > common 4`] = `
"a.esm.js:
const a = "a";

export { a };
//# sourceMappingURL=a.esm.js.map
"
`;

exports[`single package and multiple entries > common 5`] = `
"a.esm.js.map:
{"version":3,"file":"a.esm.js","sources":["../src/a.ts"],"sourcesContent":["export const a = 'a'\\n"],"names":[],"mappings":"AAAO,MAAM,CAAI,GAAA;;;;"}"
`;

exports[`single package and multiple entries > common 6`] = `
"a.esm.min.js:
const o="a";export{o as a};
//# sourceMappingURL=a.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 7`] = `
"a.esm.min.js.map:
{"version":3,"file":"a.esm.min.js","sources":["../src/a.ts"],"sourcesContent":["export const a = 'a'\\n"],"names":["a"],"mappings":"AAAO,MAAMA,EAAI"}"
`;

exports[`single package and multiple entries > common 8`] = `
"a.iife.js:
var singlePackageAndMultipleEntriesa = (function (exports) {
	'use strict';

	const a = "a";

	exports.a = a;

	return exports;

})({});
//# sourceMappingURL=a.iife.js.map
"
`;

exports[`single package and multiple entries > common 9`] = `
"a.iife.js.map:
{"version":3,"file":"a.iife.js","sources":["../src/a.ts"],"sourcesContent":["export const a = 'a'\\n"],"names":[],"mappings":";;;AAAO,OAAM,CAAI,GAAA;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 10`] = `
"a.iife.min.js:
var singlePackageAndMultipleEntriesa=function(a){"use strict";return a.a="a",a}({});
//# sourceMappingURL=a.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 11`] = `
"a.iife.min.js.map:
{"version":3,"file":"a.iife.min.js","sources":["../src/a.ts"],"sourcesContent":["export const a = 'a'\\n"],"names":[],"mappings":"yEAAiB"}"
`;

exports[`single package and multiple entries > common 12`] = `
"a.umd.js:
(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
	typeof define === 'function' && define.amd ? define(['exports'], factory) :
	(global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntriesa = {}));
})(this, (function (exports) { 'use strict';

	const a = "a";

	exports.a = a;

}));
//# sourceMappingURL=a.umd.js.map
"
`;

exports[`single package and multiple entries > common 13`] = `
"a.umd.js.map:
{"version":3,"file":"a.umd.js","sources":["../src/a.ts"],"sourcesContent":["export const a = 'a'\\n"],"names":[],"mappings":";;;;;;AAAO,OAAM,CAAI,GAAA;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 14`] = `
"a.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntriesa={})}(this,(function(e){"use strict";e.a="a"}));
//# sourceMappingURL=a.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 15`] = `
"a.umd.min.js.map:
{"version":3,"file":"a.umd.min.js","sources":["../src/a.ts"],"sourcesContent":["export const a = 'a'\\n"],"names":[],"mappings":"4QAAiB"}"
`;

exports[`single package and multiple entries > common 16`] = `
"b.d.ts:
declare const b = "b";

export { b };
"
`;

exports[`single package and multiple entries > common 17`] = `
"b.esm.d.ts:
declare const b = "b";

export { b };
"
`;

exports[`single package and multiple entries > common 18`] = `
"b.esm.js:
const b = "b";

export { b };
//# sourceMappingURL=b.esm.js.map
"
`;

exports[`single package and multiple entries > common 19`] = `
"b.esm.js.map:
{"version":3,"file":"b.esm.js","sources":["../src/b.ts"],"sourcesContent":["export const b = 'b'\\n"],"names":[],"mappings":"AAAO,MAAM,CAAI,GAAA;;;;"}"
`;

exports[`single package and multiple entries > common 20`] = `
"b.esm.min.js:
const o="b";export{o as b};
//# sourceMappingURL=b.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 21`] = `
"b.esm.min.js.map:
{"version":3,"file":"b.esm.min.js","sources":["../src/b.ts"],"sourcesContent":["export const b = 'b'\\n"],"names":["b"],"mappings":"AAAO,MAAMA,EAAI"}"
`;

exports[`single package and multiple entries > common 22`] = `
"b.iife.js:
var singlePackageAndMultipleEntriesb = (function (exports) {
	'use strict';

	const b = "b";

	exports.b = b;

	return exports;

})({});
//# sourceMappingURL=b.iife.js.map
"
`;

exports[`single package and multiple entries > common 23`] = `
"b.iife.js.map:
{"version":3,"file":"b.iife.js","sources":["../src/b.ts"],"sourcesContent":["export const b = 'b'\\n"],"names":[],"mappings":";;;AAAO,OAAM,CAAI,GAAA;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 24`] = `
"b.iife.min.js:
var singlePackageAndMultipleEntriesb=function(e){"use strict";return e.b="b",e}({});
//# sourceMappingURL=b.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 25`] = `
"b.iife.min.js.map:
{"version":3,"file":"b.iife.min.js","sources":["../src/b.ts"],"sourcesContent":["export const b = 'b'\\n"],"names":[],"mappings":"yEAAiB"}"
`;

exports[`single package and multiple entries > common 26`] = `
"b.umd.js:
(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
	typeof define === 'function' && define.amd ? define(['exports'], factory) :
	(global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntriesb = {}));
})(this, (function (exports) { 'use strict';

	const b = "b";

	exports.b = b;

}));
//# sourceMappingURL=b.umd.js.map
"
`;

exports[`single package and multiple entries > common 27`] = `
"b.umd.js.map:
{"version":3,"file":"b.umd.js","sources":["../src/b.ts"],"sourcesContent":["export const b = 'b'\\n"],"names":[],"mappings":";;;;;;AAAO,OAAM,CAAI,GAAA;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 28`] = `
"b.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntriesb={})}(this,(function(e){"use strict";e.b="b"}));
//# sourceMappingURL=b.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 29`] = `
"b.umd.min.js.map:
{"version":3,"file":"b.umd.min.js","sources":["../src/b.ts"],"sourcesContent":["export const b = 'b'\\n"],"names":[],"mappings":"4QAAiB"}"
`;

exports[`single package and multiple entries > common 30`] = `
"bar.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`single package and multiple entries > common 31`] = `
"bar.esm.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`single package and multiple entries > common 32`] = `
"bar.esm.js:
function bar() {
  return "bar";
}

export { bar };
//# sourceMappingURL=bar.esm.js.map
"
`;

exports[`single package and multiple entries > common 33`] = `
"bar.esm.js.map:
{"version":3,"file":"bar.esm.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and multiple entries > common 34`] = `
"bar.esm.min.js:
function r(){return"bar"}export{r as bar};
//# sourceMappingURL=bar.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 35`] = `
"bar.esm.min.js.map:
{"version":3,"file":"bar.esm.min.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":["bar"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 36`] = `
"bar.iife.js:
var singlePackageAndMultipleEntriesbar = (function (exports) {
  'use strict';

  function bar() {
    return "bar";
  }

  exports.bar = bar;

  return exports;

})({});
//# sourceMappingURL=bar.iife.js.map
"
`;

exports[`single package and multiple entries > common 37`] = `
"bar.iife.js.map:
{"version":3,"file":"bar.iife.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 38`] = `
"bar.iife.min.js:
var singlePackageAndMultipleEntriesbar=function(r){"use strict";return r.bar=function(){return"bar"},r}({});
//# sourceMappingURL=bar.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 39`] = `
"bar.iife.min.js.map:
{"version":3,"file":"bar.iife.min.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":"6EAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 40`] = `
"bar.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntriesbar = {}));
})(this, (function (exports) { 'use strict';

  function bar() {
    return "bar";
  }

  exports.bar = bar;

}));
//# sourceMappingURL=bar.umd.js.map
"
`;

exports[`single package and multiple entries > common 41`] = `
"bar.umd.js.map:
{"version":3,"file":"bar.umd.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 42`] = `
"bar.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntriesbar={})}(this,(function(e){"use strict";e.bar=function(){return"bar"}}));
//# sourceMappingURL=bar.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 43`] = `
"bar.umd.min.js.map:
{"version":3,"file":"bar.umd.min.js","sources":["../src/bar.ts"],"sourcesContent":["export function bar() {\\n  return 'bar'\\n}\\n"],"names":[],"mappings":"gRAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 44`] = `
"c.d.ts:
declare const c = "c";

export { c };
"
`;

exports[`single package and multiple entries > common 45`] = `
"c.esm.d.ts:
declare const c = "c";

export { c };
"
`;

exports[`single package and multiple entries > common 46`] = `
"c.esm.js:
const c = "c";

export { c };
//# sourceMappingURL=c.esm.js.map
"
`;

exports[`single package and multiple entries > common 47`] = `
"c.esm.js.map:
{"version":3,"file":"c.esm.js","sources":["../src/c.ts"],"sourcesContent":["export const c = 'c'\\n"],"names":[],"mappings":"AAAO,MAAM,CAAI,GAAA;;;;"}"
`;

exports[`single package and multiple entries > common 48`] = `
"c.esm.min.js:
const c="c";export{c};
//# sourceMappingURL=c.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 49`] = `
"c.esm.min.js.map:
{"version":3,"file":"c.esm.min.js","sources":["../src/c.ts"],"sourcesContent":["export const c = 'c'\\n"],"names":["c"],"mappings":"AAAO,MAAMA,EAAI"}"
`;

exports[`single package and multiple entries > common 50`] = `
"c.iife.js:
var singlePackageAndMultipleEntriesc = (function (exports) {
	'use strict';

	const c = "c";

	exports.c = c;

	return exports;

})({});
//# sourceMappingURL=c.iife.js.map
"
`;

exports[`single package and multiple entries > common 51`] = `
"c.iife.js.map:
{"version":3,"file":"c.iife.js","sources":["../src/c.ts"],"sourcesContent":["export const c = 'c'\\n"],"names":[],"mappings":";;;AAAO,OAAM,CAAI,GAAA;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 52`] = `
"c.iife.min.js:
var singlePackageAndMultipleEntriesc=function(c){"use strict";return c.c="c",c}({});
//# sourceMappingURL=c.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 53`] = `
"c.iife.min.js.map:
{"version":3,"file":"c.iife.min.js","sources":["../src/c.ts"],"sourcesContent":["export const c = 'c'\\n"],"names":[],"mappings":"yEAAiB"}"
`;

exports[`single package and multiple entries > common 54`] = `
"c.umd.js:
(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
	typeof define === 'function' && define.amd ? define(['exports'], factory) :
	(global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntriesc = {}));
})(this, (function (exports) { 'use strict';

	const c = "c";

	exports.c = c;

}));
//# sourceMappingURL=c.umd.js.map
"
`;

exports[`single package and multiple entries > common 55`] = `
"c.umd.js.map:
{"version":3,"file":"c.umd.js","sources":["../src/c.ts"],"sourcesContent":["export const c = 'c'\\n"],"names":[],"mappings":";;;;;;AAAO,OAAM,CAAI,GAAA;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 56`] = `
"c.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntriesc={})}(this,(function(e){"use strict";e.c="c"}));
//# sourceMappingURL=c.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 57`] = `
"c.umd.min.js.map:
{"version":3,"file":"c.umd.min.js","sources":["../src/c.ts"],"sourcesContent":["export const c = 'c'\\n"],"names":[],"mappings":"4QAAiB"}"
`;

exports[`single package and multiple entries > common 58`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and multiple entries > common 59`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and multiple entries > common 60`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`single package and multiple entries > common 61`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and multiple entries > common 62`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`single package and multiple entries > common 63`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 64`] = `
"index.iife.js:
var singlePackageAndMultipleEntries = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`single package and multiple entries > common 65`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 66`] = `
"index.iife.min.js:
var singlePackageAndMultipleEntries=function(n){"use strict";return n.foo=function(){return"foo"},n}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`single package and multiple entries > common 67`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"0EAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and multiple entries > common 68`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndMultipleEntries = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`single package and multiple entries > common 69`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and multiple entries > common 70`] = `
"index.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndMultipleEntries={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`single package and multiple entries > common 71`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"6QAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and single entry > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`single package and single entry > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and single entry > common 3`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`single package and single entry > common 4`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`single package and single entry > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`single package and single entry > common 6`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`single package and single entry > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`single package and single entry > common 8`] = `
"index.iife.js:
var singlePackageAndSingleEntry = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`single package and single entry > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`single package and single entry > common 10`] = `
"index.iife.min.js:
var singlePackageAndSingleEntry=function(n){"use strict";return n.foo=function(){return"foo"},n}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`single package and single entry > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"sEAAO,WACE,MAAA,KACT"}"
`;

exports[`single package and single entry > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.singlePackageAndSingleEntry = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`single package and single entry > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`single package and single entry > common 14`] = `
"index.umd.min.js:
!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?n(exports):"function"==typeof define&&define.amd?define(["exports"],n):n((e="undefined"!=typeof globalThis?globalThis:e||self).singlePackageAndSingleEntry={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`single package and single entry > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"yQAAO,WACE,MAAA,KACT"}"
`;

exports[`with no resolve exports > common 1`] = `
[
  "index.d.ts",
  "index.esm.d.ts",
  "index.esm.js",
  "index.esm.js.map",
  "index.esm.min.js",
  "index.esm.min.js.map",
  "index.iife.js",
  "index.iife.js.map",
  "index.iife.min.js",
  "index.iife.min.js.map",
  "index.umd.js",
  "index.umd.js.map",
  "index.umd.min.js",
  "index.umd.min.js.map",
]
`;

exports[`with no resolve exports > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 3`] = `
"index.esm.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 4`] = `
"index.esm.js:
function foo() {
  return "foo";
}

export { foo };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`with no resolve exports > common 5`] = `
"index.esm.js.map:
{"version":3,"file":"index.esm.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"AAAO,SAAS,GAAM,GAAA;AACpB,EAAO,OAAA,KAAA,CAAA;AACT;;;;"}"
`;

exports[`with no resolve exports > common 6`] = `
"index.esm.min.js:
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=index.esm.min.js.map
"
`;

exports[`with no resolve exports > common 7`] = `
"index.esm.min.js.map:
{"version":3,"file":"index.esm.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":["foo"],"mappings":"AAAO,SAASA,IACP,MAAA,KACT"}"
`;

exports[`with no resolve exports > common 8`] = `
"index.iife.js:
var withNoResolveExport = (function (exports) {
  'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

  return exports;

})({});
//# sourceMappingURL=index.iife.js.map
"
`;

exports[`with no resolve exports > common 9`] = `
"index.iife.js.map:
{"version":3,"file":"index.iife.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;;;"}"
`;

exports[`with no resolve exports > common 10`] = `
"index.iife.min.js:
var withNoResolveExport=function(o){"use strict";return o.foo=function(){return"foo"},o}({});
//# sourceMappingURL=index.iife.min.js.map
"
`;

exports[`with no resolve exports > common 11`] = `
"index.iife.min.js.map:
{"version":3,"file":"index.iife.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"8DAAO,WACE,MAAA,KACT"}"
`;

exports[`with no resolve exports > common 12`] = `
"index.umd.js:
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.withNoResolveExport = {}));
})(this, (function (exports) { 'use strict';

  function foo() {
    return "foo";
  }

  exports.foo = foo;

}));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`with no resolve exports > common 13`] = `
"index.umd.js.map:
{"version":3,"file":"index.umd.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":";;;;;;EAAO,SAAS,GAAM,GAAA;EACpB,EAAO,OAAA,KAAA,CAAA;EACT;;;;;;;;"}"
`;

exports[`with no resolve exports > common 14`] = `
"index.umd.min.js:
!function(e,o){"object"==typeof exports&&"undefined"!=typeof module?o(exports):"function"==typeof define&&define.amd?define(["exports"],o):o((e="undefined"!=typeof globalThis?globalThis:e||self).withNoResolveExport={})}(this,(function(e){"use strict";e.foo=function(){return"foo"}}));
//# sourceMappingURL=index.umd.min.js.map
"
`;

exports[`with no resolve exports > common 15`] = `
"index.umd.min.js.map:
{"version":3,"file":"index.umd.min.js","sources":["../src/index.ts"],"sourcesContent":["export function foo() {\\n  return 'foo'\\n}\\n"],"names":[],"mappings":"iQAAO,WACE,MAAA,KACT"}"
`;
